<resources>
    <string name="live_wallpaper_name" translatable="false">Potato battery</string>

    <!-- Preference titles and summaries-->
    <string name="title_potato_preferences">Settings</string>
    <string name="title_gradient">Gradient</string>
    <string name="sum_disable_gradient">Disable gradient</string>
    <string name="sum_enable_gradient">Enable gradient</string>
    <string name="title_time">Refresh time (seconds)</string>
    <string name="title_dev">Developer</string>
    <string name="sum_dev">Enrico D\'Ortenzio</string>
    <string name="dev_git_link">https://github.com/enricocid</string>
    <string name="title_version">Version info</string>
    <string name="app_git_link">https://github.com/enricocid/Potato-Battery-LP</string>
</resources>
