<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:key="@string/title_gradient"
            android:icon="@drawable/ic_gradient"
            android:title="@string/title_gradient"
            android:summaryOn="@string/sum_disable_gradient"
            android:summaryOff="@string/sum_enable_gradient"/>

    <Preference
            android:icon="@drawable/ic_face"
            android:title="@string/title_dev"
            android:summary="@string/sum_dev">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/dev_git_link"/>
    </Preference>

    <Preference
            android:icon="@drawable/ic_code"
            android:title="@string/title_version"
            android:summary="@string/versionName">
        <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_git_link"/>
    </Preference>

</PreferenceScreen>
